; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/engine/extr_tb_rsa.c_ENGINE_set_default_RSA.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/engine/extr_tb_rsa.c_ENGINE_set_default_RSA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@rsa_table = common dso_local global i32 0, align 4
@engine_unregister_all_RSA = common dso_local global i32 0, align 4
@dummy_nid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ENGINE_set_default_RSA(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i32, i32* @engine_unregister_all_RSA, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = call i32 @engine_table_register(i32* @rsa_table, i32 %9, %struct.TYPE_4__* %10, i32* @dummy_nid, i32 1, i32 1)
  store i32 %11, i32* %2, align 4
  br label %13

12:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %13

13:                                               ; preds = %12, %8
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @engine_table_register(i32*, i32, %struct.TYPE_4__*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
